tests/generics_zero_arg_return_bad.stderr
tests/generics_zero_arg_return_bad.sl:1:1: error: SL2004: type mismatch
