tests/generics_zero_arg_return_bad.sl
fn makeThing[T]() T {
	return 0
}
